# renamed-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PUBLISHING.md  README.md  SECURITY.md  codecov.yml  composer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
examples/csharp/: BasicUsage.cs
examples/go/basic-rename/: main.go
examples/go/pdf-split/: main.go
examples/java/: BasicUsage.java
examples/php/: basic_usage.php
examples/python/: basic_rename.py  pdf_split.py
examples/ruby/: basic_usage.rb
examples/rust/: Cargo.toml  basic_usage.rs
examples/swift/: BasicUsage.swift  Package.swift
examples/typescript/: basic-rename.ts  pdf-split.ts
openapi/: README.md  openapi.json
sdks/csharp/: README.md  Renamed.sln
sdks/csharp/Renamed/: AsyncJob.cs  Renamed.csproj  RenamedClient.cs  RenamedClientOptions.cs
sdks/csharp/Renamed.Tests/: ExceptionsTests.cs  ModelsTests.cs  Renamed.Tests.csproj  RenamedClientTests.cs
sdks/csharp/Renamed/Exceptions/: AuthenticationException.cs  InsufficientCreditsException.cs  JobException.cs  NetworkException.cs  RateLimitException.cs  RenamedExceptionBase.cs  TimeoutException.cs  ValidationException.cs
sdks/csharp/Renamed/Logging/: ConsoleLogger.cs  IRenamedLogger.cs  MicrosoftLoggerAdapter.cs
sdks/csharp/Renamed/Models/: ExtractOptions.cs  ExtractResult.cs  JobStatus.cs  PdfSplitOptions.cs  PdfSplitResult.cs  RenameOptions.cs  RenameResult.cs  User.cs
sdks/csharp/Renamed/Polyfills/: RequiredMemberAttribute.cs
sdks/go/: README.md  go.mod
sdks/go/renamed/: client.go  client_test.go  errors.go  types.go
sdks/java/: README.md  checkstyle.xml  pom.xml
sdks/php/: README.md  composer.json  phpstan.neon  phpunit.xml
sdks/php/src/: AsyncJob.php  Client.php  StderrLogger.php
sdks/php/src/Exceptions/: AuthenticationException.php  InsufficientCreditsException.php  JobException.php  NetworkException.php  (+4 more)
sdks/php/tests/: AsyncJobTest.php  ClientTest.php  ExceptionsTest.php  ModelsTest.php  TestCase.php
sdks/python/: README.md  pyproject.toml
sdks/python/renamed/: __init__.py  client.py  exceptions.py  types.py
sdks/ruby/: Gemfile  README.md  renamed.gemspec
sdks/ruby/lib/: renamed.rb
sdks/ruby/test/: client_test.rb  errors_test.rb  models_test.rb  test_helper.rb
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: async_job.rs  client.rs  error.rs  lib.rs  models.rs
sdks/swift/: Package.swift  README.md
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: client.ts  errors.ts  index.ts  types.ts
(+46 files in other folders)
