[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renamed"
version = "0.1.0b3"
description = "Official Python SDK for renamed.to API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "renamed.to" }
]
keywords = ["renamed", "pdf", "rename", "ocr", "ai", "document", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://www.renamed.to"
Documentation = "https://www.renamed.to/docs/api-docs"
Repository = "https://github.com/renamed-to/renamed-sdk"
Issues = "https://github.com/renamed-to/renamed-sdk/issues"
Changelog = "https://github.com/renamed-to/renamed-sdk/releases"

[tool.hatch.build.targets.wheel]
packages = ["renamed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
