[package]
name = "renamed"
version = "0.1.0-beta.3"
edition = "2021"
authors = ["Renamed.to <support@renamed.to>"]
description = "Official Rust SDK for the renamed.to API - AI-powered document renaming and processing"
license = "MIT"
repository = "https://github.com/renamed-to/renamed-sdk"
documentation = "https://docs.rs/renamed"
homepage = "https://www.renamed.to"
keywords = ["renamed", "ai", "document", "pdf", "api"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["time", "fs"] }
thiserror = "2.0"
mime_guess = "2.0"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
